Added mute functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="ml-pane" id="ml-pane">
         <div id="status" class="status"></div>
+        <div id = "muteToggle" class = "muteToggle"></div>
     </div>
     <!--<div class="container">
         <div class="title-pane">
