Voice trigger added

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <script src="js/ml5.min.js"></script>
     <script src="js/hamza.js"></script>
     <script src="js/shrikanth.js"></script>
+    <script src="js/darshan.js"></script>
 </head>
 
 <body>
     <div class="ml-pane" id="ml-pane">
         <div id="status" class="status"></div>
-        <div id = "muteToggle" class = "muteToggle"></div>
+        <div id="muteToggle" class="muteToggle"></div>
     </div>
     <!--<div class="container">
         <div class="title-pane">
