First Level UI structure done

--- a/index.html
+++ b/index.html
@@ -12,37 +12,29 @@
     <script src="js/hamza.js"></script>
     <script src="js/shrikanth.js"></script>
     <script src="js/darshan.js"></script>
+    <script src="js/debugger.js"></script>
 </head>
 
 <body>
-    <div class="ml-pane" id="ml-pane">
-        <div id="status" class="status"></div>
-        <div id="muteToggle" class="muteToggle"></div>
+    <div class="container">
+        <div class="leftSidebar">
+            <div class="countText">
+                <h1 id="countText">25</h1>
+            </div>
+        </div>
+        <div class="middleArea">
+            <div class="ml-pane" id="ml-pane">
+                <div id="status" class="status"></div>
+                <div id="muteToggle" class="muteToggle"></div>
+            </div>
+        </div>
+        <div class="rightSidebar" id="rightSidebar">
+            <h3>Wrist is far from Shoulder.</h3>
+            <h3>Increase your leg distance.</h3>
+            <h3>Elbow up.</h3>
+        </div>
     </div>
-    <!--<div class="container">
-        <div class="title-pane">
-            <div class="paper">
-                <h1>Shoulder Press</h1>
-            </div>
-        </div>
-        <div class="video-pane" id="video-pane">
-        </div>
-        <div class="suggestion-pane">
-            <div class="paper">
-                <h1>Shoulder Press</h1>
-            </div>
-        </div>
-        <div class="media-pane">
-            <div class="paper">
-                <h1>Shoulder Press</h1>
-            </div>
-        </div>
-        <div class="count-pane">
-            <div class="paper">
-                <h1>Shoulder Press</h1>
-            </div>
-        </div>
-    </div>-->
+    <script src="js/errorHandler.js"></script>
     <script src="js/sketch.js"></script>
 </body>
 
