--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
                 <div id="muteToggle" class="muteToggle"></div>
             </div>
         </div>
-        <div class="rightSidebar" id="rightSidebar">
-
+        <div class="rightSidebar">
+            <div id="errorTextContainer" class="errorTextContainer">
+            </div>
+            <div class="timerContainer">
+                12:34
+            </div>
         </div>
     </div>
     <script src="js/errorHandler.js"></script>
