Timer functionality added

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         <div class="rightSidebar">
             <div id="errorTextContainer" class="errorTextContainer">
             </div>
-            <div class="timerContainer">
-                12:34
+            <div class="timerContainer" id="timerContainer">
+                00 : 00
             </div>
         </div>
     </div>
+    <script src="js/timer.js"></script>
     <script src="js/errorHandler.js"></script>
     <script src="js/sketch.js"></script>
 </body>
