--- a/index.html
+++ b/index.html
@@ -16,10 +16,24 @@
 </head>
 
 <body>
+    <div class="summaryReport">
+        <div class="backdrop"></div>
+        <div class="summaryBody">
+            <h1>Well Done!</h1>
+            <h2>Reps Count</h2>
+            <h3>25</h3>
+            <h2>Duration</h2>
+            <h3>23:00</h3>
+        </div>
+    </div>
     <div class="container">
         <div class="leftSidebar">
+            <h2 class="title">Shoulder Press</h2>
             <div class="countText">
                 <h1 id="countText">0</h1>
+            </div>
+            <div class="imgContainer">
+                <img src="dumbbell.png" />
             </div>
         </div>
         <div class="middleArea">
@@ -31,6 +45,7 @@
         <div class="rightSidebar">
             <div id="errorTextContainer" class="errorTextContainer">
             </div>
+            <h4 class="timeText">TIME:</h4>
             <div class="timerContainer" id="timerContainer">
                 00 : 00
             </div>
