Summary report added

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 
 <body>
-    <div class="summaryReport">
+    <div class="summaryReport" id="summaryReport">
         <div class="backdrop"></div>
         <div class="summaryBody">
             <h1>Well Done!</h1>
             <h2>Reps Count</h2>
-            <h3>25</h3>
+            <h3 id="repsCount">25</h3>
             <h2>Duration</h2>
-            <h3>23:00</h3>
+            <h3 id="duration">23:00</h3>
         </div>
     </div>
     <div class="container">
@@ -52,6 +52,7 @@
         </div>
     </div>
     <script src="js/timer.js"></script>
+    <script src="js/summaryReport.js"></script>
     <script src="js/errorHandler.js"></script>
     <script src="js/sketch.js"></script>
 </body>
