Fire works added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="fireworks.css">
     <meta charset="utf-8">
     <script src="js/parts.js"></script>
     <script src="js/p5.js"></script>
@@ -17,7 +18,12 @@
 
 <body>
     <div class="summaryReport" id="summaryReport">
-        <div class="backdrop"></div>
+        <div class="backdrop">
+            <div class="pyro">
+                <div class="before"></div>
+                <div class="after"></div>
+            </div>
+        </div>
         <div class="summaryBody">
             <h1>Well Done!</h1>
             <h2>Reps Count</h2>
