--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             <h3 id="repsCount">25</h3>
             <h2>Duration</h2>
             <h3 id="duration">23:00</h3>
+            <h2 class="mistakes" id="mistakeTitle">Mistakes(6)</h2>
+            <div id="mistakeDetails">
+                <h4>Wrist problem</h4>
+                <h4>Life issue</h4>
+                <h4>Ripe issue</h4>
+            </div>
+
         </div>
     </div>
     <div class="container">
@@ -45,7 +52,6 @@
         <div class="middleArea">
             <div class="ml-pane" id="ml-pane">
                 <div id="status" class="status"></div>
-                <div id="muteToggle" class="muteToggle"></div>
             </div>
         </div>
         <div class="rightSidebar">
